[gd_scene load_steps=11 format=3 uid="uid://bjrd36d7negtu"]

[ext_resource type="Script" path="res://Nodes/projetil/bala_control.gd" id="1_qjvb8"]
[ext_resource type="Texture2D" uid="uid://dweajee0ekmoh" path="res://Sprites/effects/dark_particle.png" id="2_lbjfb"]
[ext_resource type="Texture2D" uid="uid://7f7b181cla0t" path="res://Sprites/projetil/yellow_control_bullett.png" id="3_7cano"]

[sub_resource type="Curve" id="Curve_s581b"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_er32b"]
colors = PackedColorArray(0.62, 0.5611, 0.2666, 1, 1, 1, 1, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3mv5r"]
size = Vector2(11.6, 7.5)

[sub_resource type="Animation" id="Animation_nxeok"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hit_box(Enemy)/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_vsx1o"]
resource_name = "colission_off"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hit_box(Enemy)/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_f677v"]
resource_name = "spin"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cgkvu"]
_data = {
"RESET": SubResource("Animation_nxeok"),
"colission_off": SubResource("Animation_vsx1o"),
"spin": SubResource("Animation_f677v")
}

[node name="bala_control" type="CharacterBody2D"]
scale = Vector2(8, 8)
script = ExtResource("1_qjvb8")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
amount = 32
lifetime = 3.0
texture = ExtResource("2_lbjfb")
gravity = Vector2(0, 90)
angular_velocity_min = -360.0
angular_velocity_max = 360.0
scale_amount_max = 2.0
scale_amount_curve = SubResource("Curve_s581b")
color = Color(0.62, 0.59055, 0.2666, 1)
color_ramp = SubResource("Gradient_er32b")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0.125, 5.96046e-08)
scale = Vector2(0.8, 0.8)
texture = ExtResource("3_7cano")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Hit_box(Enemy)" type="Area2D" parent="."]
collision_layer = 524288
collision_mask = 524288

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hit_box(Enemy)"]
position = Vector2(-0.7, 0.45)
shape = SubResource("RectangleShape2D_3mv5r")
debug_color = Color(0.745098, 0.0235294, 0, 0.423529)

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]

[node name="wall_check" type="RayCast2D" parent="."]
target_position = Vector2(3, 0)
hit_from_inside = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cgkvu")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="area_entered" from="Hit_box(Enemy)" to="." method="_on_hit_box_enemy_area_entered"]
[connection signal="screen_exited" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
